# 2022-12_AoC

./: .gitignore  README.md  pyproject.toml
puzzles/day_/: code.py
puzzles/day_01/: code.py
puzzles/day_02/: code.py  code_1.py
puzzles/day_03/: code.py
puzzles/day_04/: code.py
puzzles/day_05/: code.py
puzzles/day_06/: code.py
puzzles/day_07/: code.py  tempCodeRunnerFile.py
puzzles/day_08/: code.py  part_1_data_example_2.txt
puzzles/day_09/: code.py
puzzles/day_1/: code.py
puzzles/day_10/: code.py
puzzles/day_11/: code.py
puzzles/day_12/: code copy.py  code.py
puzzles/day_13/: code.py
puzzles/day_14/: code.py
puzzles/day_15/: code.py
puzzles/day_16/: alt.py  code.py  new.py  tempCodeRunnerFile.py
puzzles/day_17/: code.py  new.py
puzzles/day_18/: code.py
puzzles/day_19/: cachable_code.py  code.py  code_part2_(a_bit_cheaty).py  new.py  performance_code_(not_working).py
puzzles/day_20/: code.py
puzzles/day_21/: code.py
puzzles/day_22/: code.py  code_part2.py  new.py  new_code.py
puzzles/day_23/: code.py
puzzles/day_24/: code.py  test.py
puzzles/day_25/: code.py
